@@ -143,6 +143,7 @@ popd
 - [BGBUILD-174] Move plugins to boxgrinder-build gem
 - [BGBUILD-175] Rewrite boxgrinder CLI to remove thor dependency
 - [BGBUILD-81] post command execution w/ setarch breaks commands which are scripts
+- [BGBUILD-173] Include setarch package in default package list for RPM-based OSes
 
 * Tue Feb 16 2011  <mgoldman@redhat.com> - 0.8.1-1
 - Upstream release: 0.8.1
