@@ -5,6 +5,7 @@ v0.9.0
 * [BGBUILD-103] README to indicate supported operating systems / requirements
 * [BGBUILD-175] Rewrite boxgrinder CLI to remove thor dependency
 * [BGBUILD-81] post command execution w/ setarch breaks commands which are scripts
+* [BGBUILD-173] Include setarch package in default package list for RPM-based OSes
 
 v0.8.1
 
